assets/css/style.scss
---
---

@import "{{ site.theme }}";

/* Make links a nice forest green, instead of the default blue. */
a:link, a:visited, a:active, a:hover {
	font-weight: bold;
	color: #336600;
}

/* Emma wanted links to have a background when you hover over them - it's a neat touch! */
a:hover {
	color: #FFFFFF;
	background-color: #336600;
}

/* Select a monospace font instead of the default. Looks like we get Noto-Sans from GitHub Pages. */
html * {
	font-family: "Monaco", monospace;
}

/* Hide the "View the Project on GitHub" block in the header */
p.view {
	visibility: hidden;
}

/* Hide the "project maintained by ggrammar" block in the footer,
 but keep the "Theme by orderedlist" block */
footer p {
	visibility: hidden;
}
footer p small {
	visibility: visible;
}

